syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package counter;

service CounterPointService {
    rpc IncreasePoint(IncreaseRequest) returns (IncreaseResponse);
    rpc DecreasePoint(DecreaseRequest) returns (DecreaseResponse);
}

message IncreaseRequest {
    PointData data = 1;
}

message IncreaseResponse {
    PointData data = 1;
    int64 code = 2;
    string message = 3;
}

message DecreaseRequest {
    int64 userID = 1;
    int64 amount = 2;
}

message DecreaseResponse {

}

message PointData {
    int64 ID = 1 [(gogoproto.moretags) = "gorm:\"primay_key;AUTO_INCREMENT\""];
    int64 userID = 2;
    int64 amount = 3;
}